フォントの修正

--- a/public/about/about.html
+++ b/public/about/about.html
@@ -147,7 +147,9 @@
       </nav>
     </header>
     <div class="top">
-      <h2>ABOUT</h2>
+      <div class="title-about">
+        <h2>ABOUT</h2>
+      </div>
       <div class="second-nav">
         <a href="#theme">
           <div class="second-nav-box">
