--- a/public/event/booth.html
+++ b/public/event/booth.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+  <head
+    prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#"
+  >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
     <title>芸工祭2023</title>
-    <meta name = "description" content = "学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。" />
+    <meta
+      name="description"
+      content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"
+    />
 
-    <meta property = "og:url" content="https://geikousai-ncu.com/2023/" />
-    <meta property = "og:type" content="website" />
-    <meta property = "og:title" content = "芸工祭2023" />
-    <meta property = "og:description" content = "学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"/>
-    <meta prpperty = "og:site_name" content = "芸工祭2023" />
-    <meta prpperty = "og:image" content = "https://geikousai-ncu.com/2023/image/og_img.png" />
+    <meta property="og:url" content="https://geikousai-ncu.com/2023/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="芸工祭2023" />
+    <meta
+      property="og:description"
+      content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"
+    />
+    <meta prpperty="og:site_name" content="芸工祭2023" />
+    <meta
+      prpperty="og:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta name = "twitter:card" content="summary" />
-    <meta name = "twitter:title" content="芸工祭2023"/>
-    <meta name = "twitter:description" content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"/>
-    <meta name = "twitter:image" content = "https://geikousai-ncu.com/2023/image/og_img.png"/>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="芸工祭2023" />
+    <meta
+      name="twitter:description"
+      content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"
+    />
+    <meta
+      name="twitter:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"
@@ -129,11 +146,11 @@
               rel="noreferrer noopener"
               ><img src="../image/common/logo_insta.svg" alt="インスタ"
             /></a>
-            <a 
+            <a
               href="https://twitter.com/geik0"
               target="_blank"
               rel="no-referrer noopener"
-              ><img src="../image/common/logo_x.svg" alt="x" 
+              ><img src="../image/common/logo_x.svg" alt="x"
             /></a>
             <a
               href="https://www.tiktok.com/@geiko_2023"
@@ -146,7 +163,9 @@
       </nav>
     </header>
     <div class="top">
-      <h2>EVENT</h2>
+      <div class="title-event">
+        <h2>EVENT</h2>
+      </div>
       <div class="second-nav">
         <a href="./stage.html">
           <div class="second-nav-box">
@@ -171,7 +190,9 @@
       </div>
     </div>
     <div class="booth">
-      <h2>BOOTH</h2>
+      <div class="title-booth">
+        <h2>BOOTH</h2>
+      </div>
       <a href="./store.html">
         <div class="store-button">
           <p>模擬店はこちら</p>
@@ -179,23 +200,31 @@
       </a>
       <div class="contents">
         <h2>作品展示</h2>
-        <p>芸工生が制作した作品を展示しています。隅々までご覧ください。<br>
-          <span>作品投票のお願い</span>:優秀作品を決定する人気投票を行なっております！どなたでも、是非投票にご協力ください！
+        <p>
+          芸工生が制作した作品を展示しています。隅々までご覧ください。<br />
+          <span>作品投票のお願い</span
+          >:優秀作品を決定する人気投票を行なっております！どなたでも、是非投票にご協力ください！
         </p>
         <div class="container">
-          <div class="solo-container"><img src="../image/event/booth/solo.webp" alt = "個人作品"></div>
-          <div class="disco-container"><img src="../image/event/booth/solo.webp" alt = "団体作品"></div>
-          <div class="works-container"><img src="../image/event/booth/solo.webp" alt = "実習作品"></div>
+          <div class="solo-container">
+            <img src="../image/event/booth/solo.webp" alt="個人作品" />
+          </div>
+          <div class="disco-container">
+            <img src="../image/event/booth/solo.webp" alt="団体作品" />
+          </div>
+          <div class="works-container">
+            <img src="../image/event/booth/solo.webp" alt="実習作品" />
+          </div>
         </div>
       </div>
       <div class="cm">
         <div class="movie-container">
           <iframe
-          src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-          title="YouTube video player" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
           ></iframe>
         </div>
       </div>
@@ -204,8 +233,10 @@
       <p>
         <span>名古屋市立大学芸術工学部</span>
         <br />
-        <a href = "https://www.nagoya-cu.ac.jp/sda/">名古屋市立大学芸術工学部HP</a>
-        <br>
+        <a href="https://www.nagoya-cu.ac.jp/sda/"
+          >名古屋市立大学芸術工学部HP</a
+        >
+        <br />
         〒464-0083 名古屋市千種区北千種2丁目1番10号 <br />TEL052-721-1225(代)
         FAX052-721-3110
       </p>
