--- a/public/event/cafe.html
+++ b/public/event/cafe.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+  <head
+    prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#"
+  >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
     <title>芸工祭2023</title>
-    <meta name = "description" content = "カフェの店名は「NEw-rON」！素敵な料理と楽しい雰囲気をお楽しみください！" />
+    <meta
+      name="description"
+      content="カフェの店名は「NEw-rON」！素敵な料理と楽しい雰囲気をお楽しみください！"
+    />
 
-    <meta property = "og:url" content="https://geikousai-ncu.com/2023/" />
-    <meta property = "og:type" content="website" />
-    <meta property = "og:title" content = "芸工祭2023" />
-    <meta property = "og:description" content = "カフェの店名は「NEw-rON」！素敵な料理と楽しい雰囲気をお楽しみください！"/>
-    <meta prpperty = "og:site_name" content = "芸工祭2023" />
-    <meta prpperty = "og:image" content = "https://geikousai-ncu.com/2023/image/og_img.png" />
+    <meta property="og:url" content="https://geikousai-ncu.com/2023/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="芸工祭2023" />
+    <meta
+      property="og:description"
+      content="カフェの店名は「NEw-rON」！素敵な料理と楽しい雰囲気をお楽しみください！"
+    />
+    <meta prpperty="og:site_name" content="芸工祭2023" />
+    <meta
+      prpperty="og:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta name = "twitter:card" content="summary" />
-    <meta name = "twitter:title" content="芸工祭2023"/>
-    <meta name = "twitter:description" content="カフェの店名は「NEw-rON」！素敵な料理と楽しい雰囲気をお楽しみください！"/>
-    <meta name = "twitter:image" content = "https://geikousai-ncu.com/2023/image/og_img.png"/>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="芸工祭2023" />
+    <meta
+      name="twitter:description"
+      content="カフェの店名は「NEw-rON」！素敵な料理と楽しい雰囲気をお楽しみください！"
+    />
+    <meta
+      name="twitter:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"
@@ -129,11 +146,11 @@
               rel="noreferrer noopener"
               ><img src="../image/common/logo_insta.svg" alt="インスタ"
             /></a>
-            <a 
+            <a
               href="https://twitter.com/geik0"
               target="_blank"
               rel="no-referrer noopener"
-              ><img src="../image/common/logo_x.svg" alt="x" 
+              ><img src="../image/common/logo_x.svg" alt="x"
             /></a>
             <a
               href="https://www.tiktok.com/@geiko_2023"
@@ -147,7 +164,9 @@
     </header>
     <main>
       <div class="top">
-        <h2>EVENT</h2>
+        <div class="title-event">
+          <h2>EVENT</h2>
+        </div>
         <div class="second-nav">
           <a href="./stage.html">
             <div class="second-nav-box">
@@ -189,11 +208,12 @@
         <div class="cafe-content2">
           <div class="back-black-cafe">
             <div class="event-nav-box-cafe">
-              <a 
-              href="https://www.instagram.com/geiko_cafe_2023/"
-              target="_blank"
-              rel="noreferrer noopener"
-              >メニューはこちら</a>
+              <a
+                href="https://www.instagram.com/geiko_cafe_2023/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >メニューはこちら</a
+              >
             </div>
           </div>
         </div>
@@ -201,11 +221,11 @@
       <div class="cm">
         <div class="movie-container">
           <iframe
-          src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-          title="YouTube video player" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen
+            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
           ></iframe>
         </div>
       </div>
@@ -214,8 +234,10 @@
       <p>
         <span>名古屋市立大学芸術工学部</span>
         <br />
-        <a href = "https://www.nagoya-cu.ac.jp/sda/">名古屋市立大学芸術工学部HP</a>
-        <br>
+        <a href="https://www.nagoya-cu.ac.jp/sda/"
+          >名古屋市立大学芸術工学部HP</a
+        >
+        <br />
         〒464-0083 名古屋市千種区北千種2丁目1番10号 <br />TEL052-721-1225(代)
         FAX052-721-3110
       </p>
