--- a/public/event/store.html
+++ b/public/event/store.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+  <head
+    prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#"
+  >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
     <title>芸工祭2023</title>
-    <meta name = "description" content = "学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。" />
+    <meta
+      name="description"
+      content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"
+    />
 
-    <meta property = "og:url" content="https://geikousai-ncu.com/2023/" />
-    <meta property = "og:type" content="website" />
-    <meta property = "og:title" content = "芸工祭2023" />
-    <meta property = "og:description" content = "学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"/>
-    <meta prpperty = "og:site_name" content = "芸工祭2023" />
-    <meta prpperty = "og:image" content = "https://geikousai-ncu.com/2023/image/og_img.png" />
+    <meta property="og:url" content="https://geikousai-ncu.com/2023/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="芸工祭2023" />
+    <meta
+      property="og:description"
+      content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"
+    />
+    <meta prpperty="og:site_name" content="芸工祭2023" />
+    <meta
+      prpperty="og:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta name = "twitter:card" content="summary" />
-    <meta name = "twitter:title" content="芸工祭2023"/>
-    <meta name = "twitter:description" content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"/>
-    <meta name = "twitter:image" content = "https://geikousai-ncu.com/2023/image/og_img.png"/>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="芸工祭2023" />
+    <meta
+      name="twitter:description"
+      content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"
+    />
+    <meta
+      name="twitter:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"
@@ -129,11 +146,11 @@
               rel="noreferrer noopener"
               ><img src="../image/common/logo_insta.svg" alt="インスタ"
             /></a>
-            <a 
+            <a
               href="https://twitter.com/geik0"
               target="_blank"
               rel="no-referrer noopener"
-              ><img src="../image/common/logo_x.svg" alt="x" 
+              ><img src="../image/common/logo_x.svg" alt="x"
             /></a>
             <a
               href="https://www.tiktok.com/@geiko_2023"
@@ -146,7 +163,9 @@
       </nav>
     </header>
     <div class="top">
-      <h2>EVENT</h2>
+      <div class="title-event">
+        <h2>EVENT</h2>
+      </div>
       <div class="second-nav">
         <a href="./stage.html">
           <div class="second-nav-box">
@@ -171,7 +190,9 @@
       </div>
     </div>
     <div class="booth">
-      <h2>BOOTH</h2>
+      <div class="title-booth">
+        <h2>BOOTH</h2>
+      </div>
       <div class="stores">
         <h2>模擬店</h2>
         <p>個性豊かな模擬店が勢揃い。ぜひお越しください！</p>
@@ -180,35 +201,45 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Geiko Records</p>
-              <p>学年の枠を飛び越え集結した芸工生アーティストたちによるオムニバスCDを販売します！</p>
+              <p>
+                学年の枠を飛び越え集結した芸工生アーティストたちによるオムニバスCDを販売します！
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Kara⤴︎⤴︎age</p>
-              <p>北千種キャンパスでからあげ屋さん始めました！<br>いろんな味の美味しい唐揚げで気分もage⤴︎age⤴︎！キテネ！！</p>
+              <p>
+                北千種キャンパスでからあげ屋さん始めました！<br />いろんな味の美味しい唐揚げで気分もage⤴︎age⤴︎！キテネ！！
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">NEO CHARM</p>
-              <p>アクセサリー型魔法道具を販売します。<br>イヤリング↔︎ピアスのパーツ交換が可能です。</p>
+              <p>
+                アクセサリー型魔法道具を販売します。<br />イヤリング↔︎ピアスのパーツ交換が可能です。
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Nfabric</p>
-              <p>コーヒーとパン、フリマの店です。<br>お腹を満たすよりも心を満たせるようなお店作りをしています。<br>お話をするだけでも大歓迎なのでぜひ来てみてください。</p>
+              <p>
+                コーヒーとパン、フリマの店です。<br />お腹を満たすよりも心を満たせるようなお店作りをしています。<br />お話をするだけでも大歓迎なのでぜひ来てみてください。
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">おむフラとチェキ</p>
-              <p>おいしいオムレツフランクを売ります！<br>思い出作りにチェキも撮りませんか？</p>
+              <p>
+                おいしいオムレツフランクを売ります！<br />思い出作りにチェキも撮りませんか？
+              </p>
             </div>
           </div>
           <div class="shadow">
@@ -222,77 +253,95 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">.pdf</p>
-              <p>うまかわポップコーン！<br>自販機より安いドリンク！！<br>断捨離フリーマーケット！！！<br>これが一店舗で楽しめちゃいます！卒論に追われる４年生たちが店頭で待ってるよ〜(^_-)-!</p>
+              <p>
+                うまかわポップコーン！<br />自販機より安いドリンク！！<br />断捨離フリーマーケット！！！<br />これが一店舗で楽しめちゃいます！卒論に追われる４年生たちが店頭で待ってるよ〜(^_-)-!
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">うらないうらない</p>
-              <p>うらないします。<br>ゲームとかもします。<br>遊びにきてね！</p>
+              <p>
+                うらないします。<br />ゲームとかもします。<br />遊びにきてね！
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ごっちゃや</p>
-              <p>4人が4種類の手作り雑貨をごちゃ混ぜにして売ります。<br>1つのお店で4度美味しい！あなたのお気に入りの商品に絶対出会えます！<br>芸工祭当日、ご来店お待ちしております</p>
+              <p>
+                4人が4種類の手作り雑貨をごちゃ混ぜにして売ります。<br />1つのお店で4度美味しい！あなたのお気に入りの商品に絶対出会えます！<br />芸工祭当日、ご来店お待ちしております
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">じゃんくみのる</p>
-              <p>安くて美味しいスタミナフードを提供します！<br>これであなたも元気満タン！</p>
+              <p>
+                安くて美味しいスタミナフードを提供します！<br />これであなたも元気満タン！
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">たままる</p>
-              <p>お祭りでよくあるたません屋さんやります！<br>来てね〜！！</p>
+              <p>お祭りでよくあるたません屋さんやります！<br />来てね〜！！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Ari²飯店</p>
-              <p>フランクフルトorバナナ右左どっち！！！<br>はい売ります。</p>
+              <p>フランクフルトorバナナ右左どっち！！！<br />はい売ります。</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ペゴパ！</p>
-              <p>チーズハットグとトッポギ売ります。<br>建築2年7人でやりますぜひ来てください！！</p>
+              <p>
+                チーズハットグとトッポギ売ります。<br />建築2年7人でやりますぜひ来てください！！
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">まるや</p>
-              <p>おいしいまあるいタピオカと、まあるい焼きおにぎり売ってます！<br>気軽に遊びに来てね〜</p>
+              <p>
+                おいしいまあるいタピオカと、まあるい焼きおにぎり売ってます！<br />気軽に遊びに来てね〜
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ヨダストレーション</p>
-              <p>似顔絵描きます！<br>その他もステッカーやLINEスタンプも売るよ！</p>
+              <p>
+                似顔絵描きます！<br />その他もステッカーやLINEスタンプも売るよ！
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ザッカ</p>
-              <p>産業4年の3人が作る、シール、フォトフレーム、ポストカードなど...!<br>ゆるくて可愛い雑貨(ザッカ)を販売します！<br>気軽に立ち寄ってみてください！</p>
+              <p>
+                産業4年の3人が作る、シール、フォトフレーム、ポストカードなど...!<br />ゆるくて可愛い雑貨(ザッカ)を販売します！<br />気軽に立ち寄ってみてください！
+              </p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">山村飯店</p>
-              <p>福井県で大流行、山村餃子販売します。<br>見どころは元自治会長山村涼翔によるワンオペ！<br>全ての作業を華麗にこなす彼の姿を楽しみながらアツアツ餃子をご賞味あれ！</p>
+              <p>
+                福井県で大流行、山村餃子販売します。<br />見どころは元自治会長山村涼翔によるワンオペ！<br />全ての作業を華麗にこなす彼の姿を楽しみながらアツアツ餃子をご賞味あれ！
+              </p>
             </div>
           </div>
           <div class="shadow">
@@ -309,8 +358,10 @@
       <p>
         <span>名古屋市立大学芸術工学部</span>
         <br />
-        <a href = "https://www.nagoya-cu.ac.jp/sda/">名古屋市立大学芸術工学部HP</a>
-        <br>
+        <a href="https://www.nagoya-cu.ac.jp/sda/"
+          >名古屋市立大学芸術工学部HP</a
+        >
+        <br />
         〒464-0083 名古屋市千種区北千種2丁目1番10号 <br />TEL052-721-1225(代)
         FAX052-721-3110
       </p>
