--- a/public/cm/movie.html
+++ b/public/cm/movie.html
@@ -146,7 +146,9 @@
       </nav>
     </header>
     <div class="top">
-      <h2>CM</h2>
+      <div class="title-cm">
+        <h2>CM</h2>
+      </div>
       <div class="second-nav">
         <a href="./movie.html">
           <div class="second-nav-box">
