--- a/public/event/ws.html
+++ b/public/event/ws.html
@@ -146,7 +146,9 @@
       </nav>
     </header>
     <div class="top">
-      <h2>EVENT</h2>
+      <div class="title-event">
+        <h2>EVENT</h2>
+      </div>
       <div class="second-nav">
         <a href="./stage.html">
           <div class="second-nav-box">
@@ -171,7 +173,9 @@
       </div>
     </div>
     <div class="ws">
-      <h2>WORKSHOP</h2>
+      <div class="title-workshop">
+        <h2>WORKSHOP</h2>
+      </div>
       <div class="contents">
         <div class="ws-1">
           <div class = "head-container">
