boothのlarrys追加、その他修正

--- a/public/event/store.html
+++ b/public/event/store.html
@@ -201,16 +201,20 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Geiko Records</p>
-              <p>
+              <p class = discription>
                 学年の枠を飛び越え集結した芸工生アーティストたちによるオムニバスCDを販売します！
               </p>
+              <!-- <div class="sns-container">
+                <img src = "../image/common/logo_insta.svg">
+                <img src = "../image/common/logo_x.svg">
+              </div> -->
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Kara⤴︎⤴︎age</p>
-              <p>
+              <p class = discription>
                 北千種キャンパスでからあげ屋さん始めました！<br />いろんな味の美味しい唐揚げで気分もage⤴︎age⤴︎！キテネ！！
               </p>
             </div>
@@ -219,7 +223,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">NEO CHARM</p>
-              <p>
+              <p class = discription>
                 アクセサリー型魔法道具を販売します。<br />イヤリング↔︎ピアスのパーツ交換が可能です。
               </p>
             </div>
@@ -228,7 +232,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Nfabric</p>
-              <p>
+              <p class = discription>
                 コーヒーとパン、フリマの店です。<br />お腹を満たすよりも心を満たせるようなお店作りをしています。<br />お話をするだけでも大歓迎なのでぜひ来てみてください。
               </p>
             </div>
@@ -237,7 +241,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">おむフラとチェキ</p>
-              <p>
+              <p class = discription>
                 おいしいオムレツフランクを売ります！<br />思い出作りにチェキも撮りませんか？
               </p>
             </div>
@@ -245,15 +249,15 @@
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
-              <p class="name">orasa</p>
-              <p>説明文</p>
+              <p class="name">ORasa</p>
+              <p class = discription>可愛い！楽しい！美味しい！をテーマに、みんな大好きクロッフルを売ります‼️<br>カラフルでポップな世界観をお楽しみ下さい!!!</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">.pdf</p>
-              <p>
+              <p class = discription>
                 うまかわポップコーン！<br />自販機より安いドリンク！！<br />断捨離フリーマーケット！！！<br />これが一店舗で楽しめちゃいます！卒論に追われる４年生たちが店頭で待ってるよ〜(^_-)-!
               </p>
             </div>
@@ -262,7 +266,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">うらないうらない</p>
-              <p>
+              <p class = discription>
                 うらないします。<br />ゲームとかもします。<br />遊びにきてね！
               </p>
             </div>
@@ -271,7 +275,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ごっちゃや</p>
-              <p>
+              <p class = discription>
                 4人が4種類の手作り雑貨をごちゃ混ぜにして売ります。<br />1つのお店で4度美味しい！あなたのお気に入りの商品に絶対出会えます！<br />芸工祭当日、ご来店お待ちしております
               </p>
             </div>
@@ -280,7 +284,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">じゃんくみのる</p>
-              <p>
+              <p class = discription>
                 安くて美味しいスタミナフードを提供します！<br />これであなたも元気満タン！
               </p>
             </div>
@@ -289,21 +293,21 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">たままる</p>
-              <p>お祭りでよくあるたません屋さんやります！<br />来てね〜！！</p>
+              <p class = discription>お祭りでよくあるたません屋さんやります！<br />来てね〜！！</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">Ari²飯店</p>
-              <p>フランクフルトorバナナ右左どっち！！！<br />はい売ります。</p>
+              <p class = discription>フランクフルトorバナナ右左どっち！！！<br />はい売ります。</p>
             </div>
           </div>
           <div class="shadow">
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ペゴパ！</p>
-              <p>
+              <p class = discription>
                 チーズハットグとトッポギ売ります。<br />建築2年7人でやりますぜひ来てください！！
               </p>
             </div>
@@ -312,7 +316,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">まるや</p>
-              <p>
+              <p class = discription>
                 おいしいまあるいタピオカと、まあるい焼きおにぎり売ってます！<br />気軽に遊びに来てね〜
               </p>
             </div>
@@ -321,7 +325,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ヨダストレーション</p>
-              <p>
+              <p class = discription>
                 似顔絵描きます！<br />その他もステッカーやLINEスタンプも売るよ！
               </p>
             </div>
@@ -330,7 +334,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">ザッカ</p>
-              <p>
+              <p class = discription>
                 産業4年の3人が作る、シール、フォトフレーム、ポストカードなど...!<br />ゆるくて可愛い雑貨(ザッカ)を販売します！<br />気軽に立ち寄ってみてください！
               </p>
             </div>
@@ -339,7 +343,7 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">山村飯店</p>
-              <p>
+              <p class = discription>
                 福井県で大流行、山村餃子販売します。<br />見どころは元自治会長山村涼翔によるワンオペ！<br />全ての作業を華麗にこなす彼の姿を楽しみながらアツアツ餃子をご賞味あれ！
               </p>
             </div>
@@ -348,7 +352,14 @@
             <div class="store">
               <div class="icon-container"></div>
               <p class="name">跳膝商店</p>
-              <p>クラフトコーラとモノを売ってます。</p>
+              <p class = discription>クラフトコーラとモノを売ってます。</p>
+            </div>
+          </div>
+          <div class="shadow">
+            <div class="store">
+              <div class="icon-container"></div>
+              <p class="name">Larry's Dinner</p>
+              <p class = discription>〜青い鳥焼きます〜<br>焼いた鳥をみんなでわいわい売ってます。SNSも要チェック!!<br>この世界から消えつつあるLarryを、私たちは忘れない。これは、青い鳥に捧ぐ鎮魂歌(レクイエム)</p>
             </div>
           </div>
         </div>
