フォント修正

--- a/public/about/about.html
+++ b/public/about/about.html
@@ -72,7 +72,7 @@
       <nav class="navigation">
         <div class="navigation_frame">
           <div style="width: 40%">
-            <p>ABOUT</p>
+            <a href = "../about/about.html">ABOUT</a>
             <div class="navigation_list">
               <div class="neon-line"></div>
               <ul class="navigation_ul">
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div style="width: 45%">
-            <p>EVENT</p>
+            <a href="../event/stage.html">EVENT</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div style="width: 40%; padding-top: 10%">
-            <p>CM</p>
+            <a href = "../cm/movie.html">CM</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
@@ -186,15 +186,15 @@
       <div class="map">
         <h3>アクセス</h3>
         <h2>ACCESS</h2>
-        <img src="../image/event/about/map.webp" class="map-img" />
+        <img src="../image/about/map.webp" class="map-img" />
       </div>
       <div class="bus">
         <h2>バスでお越しの方</h2>
-        <img src="../image/event/about/bus.webp" class="bus-img" />
+        <img src="../image/about/bus.webp" class="bus-img" />
       </div>
       <div class="subway">
         <h2>電車でお越しの方</h2>
-        <img src="../image/event/about/subway.webp" class="subway-img" />
+        <img src="../image/about/subway.webp" class="subway-img" />
       </div>
     </div>
     <div id="sns">
