--- a/public/event/ws.html
+++ b/public/event/ws.html
@@ -71,7 +71,7 @@
       <nav class="navigation">
         <div class="navigation_frame">
           <div style="width: 40%">
-            <p>ABOUT</p>
+            <a href = "../about/about.html">ABOUT</a>
             <div class="navigation_list">
               <div class="neon-line"></div>
               <ul class="navigation_ul">
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div style="width: 45%">
-            <p>EVENT</p>
+            <a href = "stage.html">EVENT</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div style="width: 40%; padding-top: 10%">
-            <p>CM</p>
+            <a href = "../cm/movie.html">CM</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
@@ -197,7 +197,7 @@
               </div>
             </div>
             <div class = "discription">
-              <p>建築学科でよくみる模型を自分の手で作ってみませんか？好きな色、家具を選んで、自分だけの部屋を作りましょう。工作が好きな方大歓迎、わからないところはスタッフがお手伝いするので大人も子供も楽しめます！ 当日は学生の作品も展示するのでぜひ来てください。</p>
+              <p>建築学科でよくみる模型を自分の手で作ってみませんか？好きな色、家具を選んで、自分だけの部屋を作りましょう。<br>工作が好きな方大歓迎、わからないところはスタッフがお手伝いするので大人も子供も楽しめます！<br>当日は学生の作品も展示するのでぜひ来てください。</p>
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@
               </div>
             </div>
             <div class = "discription">
-              <p>芸工祭に来てくれた皆さんと一緒にインスタレーション・アートを作ってみませんか？ 今年は、投票に使用した折り紙の封筒を使って壁画を作ります。折り紙を好きなように加工して、自由に貼り付けてみてください！ 今、ここでしか生まれない唯一無二の作品をみんなで作りましょう！ 当日は学生の作品も展示するのでぜひ来てください。</p>
+              <p>芸工祭に来てくれた皆さんと一緒にインスタレーション・アートを作ってみませんか？<br>今年は、投票に使用した折り紙の封筒を使って壁画を作ります。折り紙を好きなように加工して、自由に貼り付けてみてください！ 今、ここでしか生まれない唯一無二の作品をみんなで作りましょう！<br>当日は学生の作品も展示するのでぜひ来てください。</p>
             </div>
           </div>
         </div>
@@ -237,7 +237,7 @@
               </div>
             </div>
             <div class = "discription">
-              <p>校舎に設置されたスタンプ台を見つけて、NEON看板のイラストを完成させよう！ パンフレットと一緒に配られたスタンプ台紙を使ってくださいね。 当日は学生の作品も展示するのでぜひ来てください。</p>
+              <p>校舎に設置されたスタンプ台を見つけて、NEON看板のイラストを完成させよう！ パンフレットと一緒に配られたスタンプ台紙を使ってくださいね。<br>当日は学生の作品も展示するのでぜひ来てください。</p>
             </div>
           </div>
         </div>
