--- a/public/event/stage.html
+++ b/public/event/stage.html
@@ -59,6 +59,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <!-- <script src="./js/lottie.js" type="text/javascript"></script> -->
     <script src="../js/common.js"></script>
+    <script src="../js/stage.js"></script>
 
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/stage.css" />
@@ -88,7 +89,7 @@
       <nav class="navigation">
         <div class="navigation_frame">
           <div style="width: 40%">
-            <p>ABOUT</p>
+            <a href = "../about/about.html">ABOUT</a>
             <div class="navigation_list">
               <div class="neon-line"></div>
               <ul class="navigation_ul">
@@ -105,7 +106,7 @@
             </div>
           </div>
           <div style="width: 45%">
-            <p>EVENT</p>
+            <a href = "stage.html">EVENT</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
@@ -125,7 +126,7 @@
             </div>
           </div>
           <div style="width: 40%; padding-top: 10%">
-            <p>CM</p>
+            <a href = "../cm/movie.html">CM</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
@@ -202,7 +203,7 @@
             <h3>1日目</h3>
           </div>
           <div class="schedule-img">
-            <img src="../image/stage/stage_day1.png" alt="1日目スケジュール" />
+            <img src="../image/event/stage/stage_day1.png" alt="1日目スケジュール" />
           </div>
         </div>
         <div class="one-of-schedules">
@@ -210,7 +211,7 @@
             <h3>2日目</h3>
           </div>
           <div class="schedule-img">
-            <img src="../image/stage/stage_day2.png" alt="2日目スケジュール" />
+            <img src="../image/event/stage/stage_day2.png" alt="2日目スケジュール" />
           </div>
         </div>
       </div>
@@ -229,7 +230,7 @@
         </div>
         <div class="schedule-img-sp">
           <img
-            src="../image/stage/stage_day1.png"
+            src="../image/event/stage/stage_day1.png"
             alt="1日目スケジュール"
             id="targetImage"
           />
