--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
       <nav class="navigation">
         <div class="navigation_frame">
           <div style="width: 40%">
-            <p>ABOUT</p>
+            <a href = "about/about.html">ABOUT</a>
             <div class="navigation_list">
               <div class="neon-line"></div>
               <ul class="navigation_ul">
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div style="width: 45%">
-            <p>EVENT</p>
+            <a href = "event/stage.html">EVENT</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 120px"></div>
               <ul class="navigation_ul">
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div style="width: 40%; padding-top: 10%">
-            <p>CM</p>
+            <a href = "cm/movie.html">CM</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
