--- a/public/cm/goods.html
+++ b/public/cm/goods.html
@@ -167,11 +167,11 @@
       <div class="contents">
         <div class="area">
           <div class="goods-container"></div>
-          <p>ラバーバンド<br /><span>¥価格</span></p>
+          <p>NEOラバーバンド<br /><span>¥600</span></p>
         </div>
         <div class="area">
           <div class="goods-container"></div>
-          <p>ステッカー<br /><span>¥価格</span></p>
+          <p>ロゴ&チケット風ステッカー<br /><span>¥価格</span></p>
         </div>
         <div class="area">
           <div class="goods-container"></div>
