--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
             </a>
             <a href = "./event/ws.html" class="index-workshop">
               <img src = "./image/index/icon_ws.svg">
-              <p>ﾜ-ｸｼｮｯﾌﾟ</p>
+              <p>ワークショップ</p>
             </a>
             <a href = "./event/booth.html" class="index-booth">
               <img src="./image/index/icon_booth.svg">
