--- a/public/event/booth.html
+++ b/public/event/booth.html
@@ -200,11 +200,11 @@
       </a>
       <div class="contents">
         <h2>作品展示</h2>
-        <p>
-          芸工生が制作した作品を展示しています。隅々までご覧ください。<br />
-          <span>作品投票のお願い</span
-          >:優秀作品を決定する人気投票を行なっております！どなたでも、是非投票にご協力ください！
-        </p>
+        <p class = "discription">芸工生が制作した作品を展示しています。隅々までご覧ください。</p>
+        <div class="vote">
+          <p>作品投票のお願い</p>
+          <p>優秀作品を決定する人気投票を行なっております！どなたでも、是非投票にご協力ください！</p>
+        </div>
         <div class="container">
           <div class="solo-container">
             <img src="../image/event/booth/solo.webp" alt="個人作品" />
